// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with admin button should render Header with Admin button 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "test",
        "pathname": "/notes",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "test",
            "pathname": "/notes",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "test",
          "pathname": "/notes",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      isSuperAdmin={true}
      startLogout={[MockFunction]}
      userName="User"
    >
      <header
        className="header"
      >
        <div
          className="content-container"
        >
          <div
            className="header__content"
          >
            <Link
              className="header__title"
              to="/notes"
            >
              <LinkAnchor
                className="header__title"
                href="/notes"
                navigate={[Function]}
              >
                <a
                  className="header__title"
                  href="/notes"
                  onClick={[Function]}
                >
                  <h1>
                    Snippy Notes
                  </h1>
                  <span
                    className="beta-tag"
                  >
                    BETA
                  </span>
                </a>
              </LinkAnchor>
            </Link>
            <div>
              <Link
                className="btn--admin"
                to="/admin"
              >
                <LinkAnchor
                  className="btn--admin"
                  href="/admin"
                  navigate={[Function]}
                >
                  <a
                    className="btn--admin"
                    href="/admin"
                    onClick={[Function]}
                  >
                    <button
                      className="btn btn--secondary btn--shine"
                    >
                      Admin »
                    </button>
                  </a>
                </LinkAnchor>
              </Link>
              <button
                className="btn btn--primary btn--link"
                onClick={[MockFunction]}
              >
                Logout
              </button>
            </div>
          </div>
        </div>
      </header>
    </Header>
  </Router>
</MemoryRouter>
`;

exports[`without admin button should render Header without Admin button 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "test",
        "pathname": "/notes",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "test",
            "pathname": "/notes",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "test",
          "pathname": "/notes",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Header
      startLogout={[MockFunction]}
      userName="User"
    >
      <header
        className="header"
      >
        <div
          className="content-container"
        >
          <div
            className="header__content"
          >
            <Link
              className="header__title"
              to="/notes"
            >
              <LinkAnchor
                className="header__title"
                href="/notes"
                navigate={[Function]}
              >
                <a
                  className="header__title"
                  href="/notes"
                  onClick={[Function]}
                >
                  <h1>
                    Snippy Notes
                  </h1>
                  <span
                    className="beta-tag"
                  >
                    BETA
                  </span>
                </a>
              </LinkAnchor>
            </Link>
            <div>
              <div
                className="header__username"
              >
                User
              </div>
              <button
                className="btn btn--primary btn--link"
                onClick={[MockFunction]}
              >
                Logout
              </button>
            </div>
          </div>
        </div>
      </header>
    </Header>
  </Router>
</MemoryRouter>
`;
